--- a/Goooal/Goooal.csproj
+++ b/Goooal/Goooal.csproj
@@ -89,5 +89,11 @@
       <LastGenOutput>Settings.Designer.cs</LastGenOutput>
     </None>
   </ItemGroup>
+  <ItemGroup>
+    <Resource Include="images\симв.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <Resource Include="images\unnamed.jpg" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
