--- a/Goooal/Goooal.csproj
+++ b/Goooal/Goooal.csproj
@@ -53,8 +53,16 @@
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </ApplicationDefinition>
+    <Compile Include="EditDataView.xaml.cs">
+      <DependentUpon>EditDataView.xaml</DependentUpon>
+    </Compile>
+    <Compile Include="EditDataViewModel.cs" />
     <Compile Include="RelayCommand.cs" />
     <Compile Include="TimeSpanConverter.cs" />
+    <Page Include="EditDataView.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
     <Page Include="MainWindow.xaml">
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
