--- a/MigrationBackup/571b2ca0/Goooal/Goooal.csproj
+++ b/MigrationBackup/571b2ca0/Goooal/Goooal.csproj
@@ -34,6 +34,9 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="Stateless, Version=4.0.0.0, Culture=neutral, PublicKeyToken=93038f0927583c9a, processorArchitecture=MSIL">
+      <HintPath>..\packages\Stateless.4.2.1\lib\net40\Stateless.dll</HintPath>
+    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Data" />
     <Reference Include="System.Xml" />
@@ -105,6 +108,7 @@
       <Generator>ResXFileCodeGenerator</Generator>
       <LastGenOutput>Resources.Designer.cs</LastGenOutput>
     </EmbeddedResource>
+    <None Include="packages.config" />
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
       <LastGenOutput>Settings.Designer.cs</LastGenOutput>
@@ -112,17 +116,6 @@
   </ItemGroup>
   <ItemGroup>
     <Resource Include="images\unnamed.jpg" />
-  </ItemGroup>
-  <ItemGroup>
-    <PackageReference Include="Stateless">
-      <Version>4.2.1</Version>
-    </PackageReference>
-  </ItemGroup>
-  <ItemGroup>
-    <Resource Include="IMG_20190610_145007_BURST001_COVER.jpg" />
-  </ItemGroup>
-  <ItemGroup>
-    <Resource Include="IMG_20190610_144953.jpg" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
