--- a/Goooal/Goooal.csproj
+++ b/Goooal/Goooal.csproj
@@ -58,6 +58,9 @@
       <DependentUpon>EditDataView.xaml</DependentUpon>
     </Compile>
     <Compile Include="EditDataViewModel.cs" />
+    <Compile Include="ExeView.xaml.cs">
+      <DependentUpon>ExeView.xaml</DependentUpon>
+    </Compile>
     <Compile Include="HelpView.xaml.cs">
       <DependentUpon>HelpView.xaml</DependentUpon>
     </Compile>
@@ -65,6 +68,10 @@
     <Compile Include="RelayCommand.cs" />
     <Compile Include="TimeSpanConverter.cs" />
     <Page Include="EditDataView.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
+    <Page Include="ExeView.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
@@ -111,9 +118,9 @@
     </None>
   </ItemGroup>
   <ItemGroup>
-    <Resource Include="images\unnamed.jpg" />
-  </ItemGroup>
-  <ItemGroup>
+    <PackageReference Include="Extended.Wpf.Toolkit">
+      <Version>3.5.0</Version>
+    </PackageReference>
     <PackageReference Include="Stateless">
       <Version>4.2.1</Version>
     </PackageReference>
@@ -123,6 +130,9 @@
   </ItemGroup>
   <ItemGroup>
     <Resource Include="IMG_20190610_144953.jpg" />
+  </ItemGroup>
+  <ItemGroup>
+    <Folder Include="images\" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
