--- a/Goooal/Goooal.csproj
+++ b/Goooal/Goooal.csproj
@@ -7,7 +7,7 @@
     <ProjectGuid>{1352BCFC-2B59-4312-950B-199B08D34648}</ProjectGuid>
     <OutputType>WinExe</OutputType>
     <RootNamespace>Goooal</RootNamespace>
-    <AssemblyName>Goooal</AssemblyName>
+    <AssemblyName>Goooal5x5</AssemblyName>
     <TargetFrameworkVersion>v4.0</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <ProjectTypeGuids>{60dc8134-eba5-43b8-bcc9-bb4bc16c2548};{FAE04EC0-301F-11D3-BF4B-00C04F79EFBC}</ProjectTypeGuids>
